# litgen_template

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CUSTOMIZE_NAMES.md  README.md  autogenerate_example_lib.py  autogenerate_lg_examplelib.py  example_lib_cpp_amalgamation.h  examplelibcpp_amalgamation.h  justfile  mypy.ini  prepare_template.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  setup.py
.github/workflows/: conda.yml  cpp.yml  emscripten.yml  pip.yml  pyodide.yml.disabled  wheels.yml
_pydef_nanobind/: module.cpp  nanobind_DaftLib.cpp
_pydef_pybind11/: pybind_DaftLib.cpp
_stubs/daft_lib/: __init__.py  __init__.pyi
bindings/: module.cpp  pybind_DaftLib.cpp  pybind_example_lib_cpp.cpp  pybind_examplelibcpp.cpp  pybind_imgui.cpp
bindings/daft_lib/: __init__.pyi
bindings/example_lib/: __init__.py  __init__.pyi
bindings/imgui/: __init__.py
bindings/lg_examplelib/: __init__.py  __init__.pyi
conda.recipe/: meta.yaml
cpp_libs/DaftLib/: CMakeLists.txt  DaftLib.h
docs/: conf.py
litgen_cmake/: litgen_cmake.cmake  litgen_setup_module.cmake
pybind_native_debug/: pybind_native_debug.py
src/cpp_libraries/DaftLib/: DaftLib.h
src/cpp_libraries/DaftLib/cpp/: DaftLib.cpp
src/pybind_native_debug/: CMakeLists.txt  pybind_native_debug.cpp  pybind_native_debug.py
src/python_bindings/: pybind_DaftLib.cpp
src/python_bindings/daft_lib/: __init__.py  __init__.pyi
tests/: daft_lib_test.py  example_lib_test.py  lg_examplelib_test.py
tools/: autogenerate_bindings.py  prepare_template.py  run_all_checks.sh
tools/change_lib_name/: change_lib_name.py  readme.md
