[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.9.2",
    "cmake>=3.22",
    "scikit-build>=0.14.1",
    "ninja; platform_system!='Windows'",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"


[tool.cibuildwheel]
build-verbosity = 1

[tool.cibuildwheel.linux]
skip = ["*i686", "*musllinux*"]


# Target python versions:
build = ["cp310-*"]

# Tests
#test-requires = "pytest"
#test-command = "pytest {project}/tests"  # cibuildwheel doc says pytest {package}/tests !

